--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -5,7 +5,7 @@
             <h1>eSports Betting Software</h1>
             <p>The eSports betting software in our gaming platform offers your users the possibility to bet on Top esports games, with Live Twitch stream and Betting stream.</p>
 
-            <p style="padding-top: 1.25em;">The eSports phenomenon is very widespread in the United States and is now growing at a dizzying rate in the Latin American market.</p>
+            <p style="padding-top: 2.25em;">The eSports phenomenon is very widespread in the United States and is now growing at a dizzying rate in the Latin American market.</p>
 
             <div class="esports-betting-col1-button">
                 <button class="button-design">Start Now</button>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="esports-betting-col2">
-<img class="esport_img" src="assets/sirplay vrnl 21.webp" alt="">
+<img class="esport_img" src="assets/sirplay image 2.webp" alt="">
         </div>
     </div>
 </section>
@@ -22,7 +22,7 @@
 
 <!-- ============================================================= -->
 
-<section class="esport_section">
+<section class="esport_section" style="padding-top: 7%;">
     <div class="top-esports-main">
         <div class="top-esports-col1">
             <h2> <b>Top eSports titles </b></h2>
