--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -81,7 +81,7 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2"
-          src="assets/sirplay whites.webp"
+          src="assets/Sirplay image 6.webp"
           width="543"
           height="317"
         />
