--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -50,7 +50,7 @@
 <section>
   <div class="sportsbetting-mainfeature-main">
     <div class="sportsbetting-mainfeature-col1">
-      <img class="sport_images_1" src="assets/sirplay vrnl 10.webp" alt="images" />
+      <img class="sport_images_1" src="assets/sirplay image 4 (1).webp" alt="images" />
     </div>
 
     <div class="sportsbetting-mainfeature-col2">
@@ -134,7 +134,7 @@
     </div>
 
     <div class="sportsbetting-benefits-image">
-      <img class="images_benefit_1" src="assets/sirplay vrnl 29_data.webp" alt="images" />
+      <img class="images_benefit_1" src="assets/Sirplay image 5.webp" alt="images" />
     </div>
   </div>
 </section>
@@ -186,7 +186,7 @@
 <section>
   <div class="sportsbetting-crypto-sports-main">
     <div class="sportsbetting-crypto-sports-col1">
-      <img class="phone_images" src="assets/sirplay vrnl 28.webp" alt="" />
+      <img class="phone_images" src="assets/Sirplay image 9.webp" alt="" />
     </div>
     <div class="sportsbetting-crypto-sports-col2">
       <h2>B2C sports betting software</h2>
