--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -225,7 +225,7 @@ display: none;
   position: fixed;
   animation: smoothScroll 1s forwards;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-
+z-index: 9999;
 }
 
 
