--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -33,14 +33,14 @@
         </p>
         <ul class="types_list">
           <li>
-            iFrame for Desktop, for computers of any resolution with different
+            iFrame for <strong> Desktop </strong> , for computers of any resolution with different
             and customizable layouts.
           </li>
           <li>
-            An iframe for mobile is designed to adapt to various mobile screen sizes and resolutions, ensuring that the embedded content is displayed correctly and efficiently. This mobile-responsive iframe offers a user-friendly experience on smartphones and tablets, accommodating the ever-growing population of mobile users.
+            iFrame for <strong>Terminals and kiosks SSBT</strong> , the layout is studied to adapt to touchscreen systems and the user experience is minimal to allow inexperienced players to place bets.
           </li>
         </ul>
-        <p>
+        <p class="type_para">
           Furthermore through API it is possible to customize graphics and
           game functions
         </p>
@@ -53,7 +53,7 @@
 
         <img
         class="types_images"
-        src="assets/sirplay vrnl 10.webp"
+        src="assets/sirplay image 4 (1).webp"
       />
       </div>
       
@@ -84,9 +84,9 @@
     </div>
   </section> 
 
-  <section class="types_sports_sec">
+  <section class="types_sports_sec_iframe">
     <div class="sports_type_row">
-      <div class="sports_col">
+      <div class="sports_col_iframe">
         <h1 class="types_header">Fully managed sportsbook</h1>
         <p class="type_para">
           Our Sportsbook iFrame includes the provision of the odds data feed
@@ -102,7 +102,7 @@
 
         <div class="white_back"></div>
       </div>
-      <div class="sports_col_1">
+      <div class="sports_col_1_iframe">
         <img class="managed_images" src="assets/sirplay sportbook 1.webp" />
       </div>
     </div>
@@ -111,7 +111,7 @@
   <section class="sports_iframes">
 <div class="sport_sol_row">
   <div class="sport_sol_col">
-<img class="i-frame_img1" src="assets/sirplay vrnl 5_data.webp">
+<img class="i-frame_img1" src="assets/Sirplay image 8.webp">
   </div>
   <div class="sport_sol_col_1">
     <h1 class="header_iframes">To get the sportsbook iframe solution is very easy</h1>
