--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -104,7 +104,7 @@ justify-content: center;
 
 .sportsbetting-mainfeature-col2 {
   width: 34%;
-  margin-right: 7%;
+  /* margin-right: 7%; */
 }
 .bet_page_list{
     font-family: "Raleway", sans-serif;
@@ -113,15 +113,25 @@ justify-content: center;
 }
 .sportsbetting-mainfeature-col2 h2 {
   color: rgb(87, 87, 86);
-  font-weight: 200;
-  font-size: 45px;
+    font-weight: 200;
+    line-height: 1.3;
+
+    font-size: 45px;
+    font-weight: bold;
+    font-size: calc(285.7%);
+    width: 80%;
+    margin-bottom: 40px;
+    letter-spacing: 0.001em;
+
 }
 .sportsbetting-mainfeature-col2 b {
   font-style: normal;
-  line-height: 1.3;
   letter-spacing: 0.001em;
   color: rgb(87, 87, 86);
-  font-size: 34px;
+  /* font-size: 34px; */
+  font-weight: 300;
+  letter-spacing: 0.001em;
+
 }
 
 .sportsbetting-mainfeature-col2 p {
@@ -147,6 +157,10 @@ justify-content: center;
 
 .sportsbetting-benefits {
   font-family: "Raleway", sans-serif;
+}
+
+strong{
+  font-weight: bold;
 }
 
 .sportsbetting-benefits {
@@ -372,6 +386,7 @@ height: 93%;
   font-family: "Raleway", sans-serif;
   margin-top: 10%;
   justify-content: center;
+  align-items: center;
 }
 
 .sportsbetting-online-retail-col2 {
