--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -30,7 +30,7 @@
 <div class="onther_param">
 <h2 class="onther_head">We make it easy for you to plug into business.</h2>
 <p class="onther_p1">This is a theme and can be customized, see it in action:</p>
-<p class="onther_a"><a>https://www.rex.games/</a></p>
+<p class="onther_a"><a><strong>https://www.rex.games/</strong></a></p>
 </div>
 
 <div class="onther_btn">
@@ -52,7 +52,7 @@
 <img class="features_images" src="assets/web3_sports.jpg.webp">
 </div>
 <div class="features_col_1">
- <h1 class="feature_header"><span>Online sportsbook software</span> Main features</h1> 
+ <h1 class="feature_header"><span>Online sportsbook software</span><strong> Main features</strong></h1> 
  <p class="feature_para">Betting and online Casino management is now transforming with the help of Vrnl:</p>  
  <ul class="feature_list">
     <li>All popular worldwide sports, all leagues, and all betting markets
