--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -26,7 +26,7 @@
     
     
     <section class="whites_label_sec">
-        <div class="whites_c_row">
+        <div class="whites_c_row whites_label">
             <div class="white_f_col">
     <img class="tv_image" src="assets/sirplay crypto tv.webp" >
             </div>
@@ -64,8 +64,10 @@
         Take advantage of our professional services and expertise, as well as of our <strong>Casino platforms</strong>  and Technology. Our regulated partners receive all the support they need to enter the online Casino industry and are provided with Branded/ Non-Branded versions of our platforms.</p>
         <p class="param_fea">Starting an Online Casino can be tricky! That is why we have created a complete Casino environment, with the best gaming providers with the aim of offering you the widest selection of slots and casino games available online, <strong>with over 50,000 games</strong> . The gaming math is secure and certified.</p>
         <p class="param_fea">With extensive risk management tools to enable a quick and easy set-up, which is ready to grow as your business does.</p>
-    <br>
+    <div class="whites_label">
         <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355">
+    </div>
+       
      </div>
     </div>
     </section>
