--- a/src/app/streaming/streaming.component.html
+++ b/src/app/streaming/streaming.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-
+<div class="container">
 <section id="animate-area">
     <div class="main_sec">
       <section class="typing-container">
@@ -31,7 +31,7 @@
       </div>
 
       <div class="index6-right-img">
-        <img class="sats_img" src="assets/sirplay vrnl 34.webp" alt="" />
+        <img class="sats_img" src="assets/Sirplay image 4.webp" alt="" />
       </div>
     </div>
   </section>
@@ -237,6 +237,6 @@
   </section> 
 
   <app-contact-com></app-contact-com>
-
+</div>
 
 <app-footer></app-footer>
