--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -65,7 +65,12 @@
         <p class="param_fea">Starting an Online Casino can be tricky! That is why we have created a complete Casino environment, with the best gaming providers with the aim of offering you the widest selection of slots and casino games available online, <strong>with over 50,000 games</strong> . The gaming math is secure and certified.</p>
         <p class="param_fea">With extensive risk management tools to enable a quick and easy set-up, which is ready to grow as your business does.</p>
     <div class="whites_label">
-        <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355">
+        <div>
+            <span>
+                <img class="explain_img" src="assets/sirplay white s.webp" width="900" height="355">
+            </span>
+        
+    </div>
     </div>
        
      </div>
