--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -79,17 +79,18 @@
 
 <section class="sportsbook_sec_page">
 <div class="sports_container_1">
-  <h1 class="sports_header_2">Sportsbook iGaming platform easy to plug into web3
-  </h1>
-  <ul class=" sport_sec_list">
-    <li>We offer White Label Casino with over 30.000 games is also available in Crypto Casino.
-    </li>
-    <li>Gaming license and legal Service to start Casino business, the gaming math is secure and certified.
-    </li>
-    <li>We have singled up the best gaming providers with the aim of offering you the widest selection of live casino games and casino games available online.</li>
-</ul>
+  <h2 class="sports_header_2">Online sportsbook software iGaming Casino Platform
+  </h2>
+  <div class="wpb_text_column wpb_content_element ">
+		<div class="wpb_wrapper">
+			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 30.000 games is&nbsp;also available in <a style="color: #a0c528;" href="#">Crypto Casino</a>.</p>
+<p>Gaming license and legal Service to start Casino business, the gaming math is secure and certified.</p>
+<p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.</p>
+
+		</div>
+	</div>
   <div class="web_3_igaming_img">
-    <img class="web_images" src="assets/sirplay web3.webp" title="Web3 plateform">
+    <img class="web_images" src="/assets/vrnl online sportbook software.jpg" title="Web3 plateform">
   </div>
 </div>
 
@@ -100,7 +101,7 @@
       
       
           <div class="crypto-section5-left">
-             <h2>Crypto Live Casino</h2>
+             <h2>Live Casino</h2>
              <ul class="online_sports_list">
               <li>Live Game Show</li>
                 <li>First Person games</li>
