--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -47,7 +47,7 @@
     <p class="white_f_p2"><em>Also included you will also have live casino software that allows you to offer your users the experience of a real casino right at their home.</em></p>
     
     
-    <button class="white_f_btn">Book a demo</button>
+    <button class="white_f_btn" routerLink="/contact">Book a demo</button>
             </div>
         </div>
     </section>
