--- a/src/app/whitecasino/whitecasino.component.css
+++ b/src/app/whitecasino/whitecasino.component.css
@@ -2824,7 +2824,7 @@ hr .hr_1 {
   width: 756px;
   margin-top: 11%;
   height: 400px;
-
+  margin-right: 12px;
 }
 
 .white_c_header {
@@ -2947,7 +2947,7 @@ hr .hr_1 {
 }
 
 .whites_content {
-  width: 43%;
+  width: 60%;
 }
 
 .whites_h1 {
@@ -3057,6 +3057,7 @@ hr .hr_1 {
   height: auto;
   vertical-align: bottom;
   border: 0;
+  margin-left: 12px;
 }
 
 .white_labe_live_col_1 {
@@ -3348,6 +3349,7 @@ font-size: 19px;
   height: auto;
   vertical-align: bottom;
   border: 0;
+  margin-left: 12px;
 }
 
 .fontcolor {
