--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -120,7 +120,7 @@
     </p>
     <ol class="gaming_para_iframe">
       <li>
-        Formalize the agreement between Sirplay and the customer.
+        Formalize the agreement between Vrnl and the customer.
       </li>
       <li>Start the sportsbook iFrame integration through APIs with our sdk.</li>
       <li>
