--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -524,7 +524,7 @@
                                <div class="accordion-body">
               
                                 <p>
-                                  Sirplay makes available a team of experts for the setting up of a fully customized sports betting
+                                  Vrnl makes available a team of experts for the setting up of a fully customized sports betting
                                   platform. Indeed, an Account Manager will collect the requirements and coordinate the project with
                                   the other team members: the Project Manager, the Graphics Designer and the IT Manager.
                                 </p>
