--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -286,13 +286,13 @@
       <div class="faq-col1">
         <h1 class="faq-header">F.A.Q.</h1>
 
-        <h3>Can I accept crypto in the casino software?</h3>
+        <!-- <h3>Can I accept crypto in the casino software?</h3>
         <p>
           Yes, of course. Our Casino can accept all crypto existing on the
           market, moreover it can also be full Web3, in practice your players
           directly use <br />their wallet as a metask and other known wallets
           to deposit and withdraw crypto.<br /><br /><br />
-        </p>
+        </p> -->
 
         <h3>What is a turnkey casino software?</h3>
         <p>
