--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -102,12 +102,12 @@
 
 <div class="index4-right-text">
     <h1>We Provide Online Turnkey Casino Solutions, Literally!<br></h1>
-    <p><b class="index4-right-text-bold">Company Setup & Bank Account Opening</b></p>
-    <p><b class="index4-right-text-bold">Regulation Compliance & Gaming License</b></p>
+    <!-- <p><b class="index4-right-text-bold">Company Setup & Bank Account Opening</b></p>
+    <p><b class="index4-right-text-bold">Regulation Compliance & Gaming License</b></p> -->
     <p><b class="index4-right-text-bold">Casino White Label Solution</b></p>
     <p><b class="index4-right-text-bold">Logo & Website Branding</b></p>
-    <p><b class="index4-right-text-bold">Trading Tools (training)</b></p>
-    <p><b class="index4-right-text-bold">Payment Gateway Processors</b></p>
+    <!-- <p><b class="index4-right-text-bold">Trading Tools (training)</b></p>
+    <p><b class="index4-right-text-bold">Payment Gateway Processors</b></p> -->
     <p><b class="index4-right-text-bold">Marketing & Promotion Services</b></p>
     <p><b class="index4-right-text-bold">Client Support</b></p>
     
