--- a/src/app/streaming/streaming.component.css
+++ b/src/app/streaming/streaming.component.css
@@ -1,7 +1,7 @@
 #animate-area { 
     width: 100%; 
     height: 400px; 
-    background-image: url(/assets/we-are-sirplay.jpg.webp);
+    background-image: url(/assets/Untitled-4.png);
   background-size: cover ;
 }
 .online-casino-button-index6:hover {
