--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -251,10 +251,11 @@ border-color: #000;
 
 }
 .white_header{
-    font-size: 39px;
+    font-size: 31px;
     width: 92%;
     font-weight: 600;
     color: #a0c528;
+    margin-bottom: 40px;
 
 
 }
@@ -263,10 +264,12 @@ border-color: #000;
 }
 .white_para{
 color: gray;
-font-size: 18px;
-    width: 80%;
+font-size: 16px;
+    width: 96%;
     line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
+    font-weight: 300;
+    color: #000;
 }
 .white_change{
     color: #a0c528;
@@ -331,27 +334,28 @@ border-radius: 5px;
     align-items: center;
 }
 .gaming_sec{
-    padding-top: 80PX;
+    padding-top: 93PX;
     margin-bottom: 80px;
 }
 .gaming_header{
-    font-size: 40px;
+    font-size: 38px;
     color: #a0c528;
-    margin-bottom: 29px;
+    margin-bottom: 39px;
     font-weight: 600;
 }
 .gaming_col{
     width: 43%;
 }
 .gaming_col_2{
-    width: 38%;
+    width: 42%;
 }
 .gaming_para{
-    font-size: 18px;
-    color: gray;
-    width: 90%;
+    font-size: 16px;
+    color: black;
+    width: 100%;
     line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
+    font-weight: 300;
 }
 @media (max-width:820px){
     .gaming_row{
@@ -401,10 +405,12 @@ display: none;
 }
 .casino_para{
     width: 97%;
-    font-size: 18px;
-    color: gray;
+    font-size: 16px;
+    color: black;
     line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
+    font-weight: 300;
+    
 }
 .casino_para_1{
     width: 100%;
@@ -412,13 +418,14 @@ display: none;
     color: gray;
 }
 .casino_col{
-    width: 18%;
+    width: 20%;
 }
 .casino_list{
-    font-size: 17px;
+    font-size: 16px;
     color: gray;
     margin-left: 30px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
+    font-weight: 300;
 }
 
 @media (max-width:820px){
