--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -203,13 +203,13 @@
 
 
       <ul>
-        <li>User Registration and Account Management: Allows users to create accounts, manage personal information, and
+        <li><b>User Registration and Account Management:</b> Allows users to create accounts, manage personal information, and
           track betting history.</li>
-        <li>Payment Integration: Supports various payment methods for depositing and withdrawing funds securely.</li>
-        <li>Customer Support: Provides customer support options, such as live chat, email, and phone support, to assist
+        <li><b>Payment Integration:</b> Supports various payment methods for depositing and withdrawing funds securely.</li>
+        <li><b>Customer Support:</b> Provides customer support options, such as live chat, email, and phone support, to assist
           users with inquiries and issues.</li>
         <li>
-          Affiliate Programs: Offers affiliate programs for marketing and promotion, allowing partners to earn
+          <b>Affiliate Programs:</b> Offers affiliate programs for marketing and promotion, allowing partners to earn
           commissions for referring users.
         </li>
       </ul>
