--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -209,7 +209,7 @@ Fighting Games: Street Fighter, Super Smash Bros, Tekken.</p>
 
 <p><strong> Real-Time Strategy RTS:</strong> StarCraft: Brood War, Warcraft III, StarCraft II.</p>
 
-<p><strong> Battle Royale:</strong> PUBG, Fortnite, Apex Legends.</p>
+<!-- <p><strong> Battle Royale:</strong> PUBG, Fortnite, Apex Legends.</p>
 
 <h3>Do you provide the eSports platform with Bitcoin?</h3>
         
@@ -220,7 +220,7 @@ Fighting Games: Street Fighter, Super Smash Bros, Tekken.</p>
 <ol>
 <li>Use BTC as the platform currency and allow players to place bets in mBTC</li>
 <li>Use BTC as a deposit method and bet in FIAT currency.</li>
-</ol>
+</ol> -->
 
 <h3>Can I have full management of the odds and the margins?</h3>
 <p>The backend counts with many tools, features and reports that will provide a complete view of the sports betting activity. There is a dedicated section to the odds management, through which it is possible to edit the margins, multiplicity and odds per market, match and/or championship.</p>
