--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -15,7 +15,7 @@
       <div class="label-para">
         <p>
           Vrnl’s <b  class="bold"> white label sportsbook solution</b> is a fully managed
-          certified sportsbook. 
+           sportsbook. 
 
           <br />
           </p>
