--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,7 +18,7 @@
   <section class="about-section1-container">
     <div class="about-section1-main">
       <h6 class="section-title  dark_title">Vrnl</h6>
-      <h1 style="font-family: Poppins;">Gaming solutions experts</h1>
+      <h1 style="font-family: Poppins;">Online Gaming Provider</h1>
 
       <div class="about_map">
         <img src="assets/sirplay-market_2022-1-768x369.png" alt="" />
