--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -92,7 +92,7 @@
           </li>
           <li>API for Business intelligence BI</li>
           <li>Marketing tools</li>
-          <li>Web3, Crypto, Metamask and many others web3 wallets.</li>
+          <li> Crypto, Metamask and many others wallets.</li>
           <li>API for external integration</li>
         </ol>
         <p class="casino_whites_sec_p">
